# rpi-mini-marquee

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  main.c  main.cpp  rpi-mini-marquee.py  rpimm.sh  runcommand-onend.sh  runcommand-onstart.sh
marquees/black_white/: arcade.pbm  atari2600.pbm  atari7800.pbm  dreamcast.pbm  gba.pbm  gc.pbm  kodi.pbm  megadrive.pbm  n64.pbm  nds.pbm  neogeo.pbm  ps2.pbm  psx.pbm  retropie.pbm  segacd.pbm  snes.pbm
